# Syntactix

./: .flake8  pyproject.toml  ruff.toml
syntactix/: error_formatter.py  text_normalizer.py
syntactix/demo/: demo_lexer.py  main.py
syntactix/lexical/: exceptions.py  lexer.py  token.py
syntactix/parser/: exceptions.py  nodes.py  parser.py
